<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ad"
    android:orientation="vertical"
    tools:context=".DroneAdmin">

    <TextView
        android:id="@+id/txtDroneAdmin"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:text="@string/txtDroneAdmin"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAddDrone2Admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtdrone2Admin"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDroneIDAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/droneid"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etTitleAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etPriceAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etDescriptionAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnAddDroneADMIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adddrone" />
</LinearLayout>