<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewuntitle"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <TextView
        android:id="@+id/Ldroneid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/droneid" />

    <TextView
        android:id="@+id/Ltitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/Lprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/Ldescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/description" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRentDrone"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btnrent"
            android:textColor="#FDFDFD" />


    </LinearLayout>
</LinearLayout>