<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/bgn"
    android:orientation="vertical"
    tools:context=".CusDroneSingleview">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="98dp" />

    <TextView
        android:id="@+id/etDroneIDCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/droneid"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/etTitleCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/etpriceCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/etDesCV"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="10dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnCusviewdroneCart"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btncartdrone"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btncusviewCheckout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/checkoutcusviewdrone"
        android:textColor="#FFFFFF" />

</LinearLayout>
