<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateLens">

    <TextView
        android:id="@+id/txtupdateDrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:text="Update Drone Details" />

    <EditText
        android:id="@+id/etDroneIDUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/etDroneidupdate"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etTitledroneUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/ettitleDroneUpdate"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etpricedroneUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/etpricedronrupdate"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etdesDroneUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8pt"
        android:ems="10"
        android:hint="@string/etdesdroneupdate"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnUpdatedrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnupdatedrone"
        android:layout_margin="8pt" />
</LinearLayout>