<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    android:orientation="vertical"
    tools:context=".DeleteDrone">

    <TextView
        android:id="@+id/txtDeletedrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:text="@string/deletedrone"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDeleteDrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:ems="10"
        android:hint="@string/droneid"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnDeletedrone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteD" />

</LinearLayout>
