<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/txthome1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DIREX Camra Rent"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        app:srcCompat="@drawable/direxcover" />

    <TextView
        android:id="@+id/txtHome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Your Category" />

    <Button
        android:id="@+id/btnCamaeraHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCameraH" />

    <Button
        android:id="@+id/btnLenseH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lensbtnH" />

    <Button
        android:id="@+id/btnDroneH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/droneHbtn" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessHbtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>