<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgooo"
    tools:context=".LensAdmin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="90dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Lens"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_margin="5dp"
        android:text="Add New Lens to the System"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ETAlensid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/lensid"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/ETAlenstitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/titlelens"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/ETAlensprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/lensprice"
        android:inputType="number"

        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/ETAlensdis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/lensdis"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/BTAadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#00A1F8"
        android:text="@string/addnewlens"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnviewL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#00A1F8"
        android:text="@string/btnviewlens"
        android:textColor="#FFFFFF" />
</LinearLayout>