<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#0013D390"
        android:text="Update Details"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/ETUlensid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded"
        android:hint="@string/lensid"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/ETUlenstitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded"
        android:hint="@string/titlelens"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/ETUlensprice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded"
        android:hint="@string/lensprice"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/ETUlensdis"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded"
        android:hint="@string/lensdis"
        android:textAlignment="center" />


    <Button
        android:id="@+id/btnUpdateLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:backgroundTint="#FFFFFF"
        android:text="UPDATE"
        android:textColor="#FDFDFD"
        android:textSize="20dp"
        app:iconTint="#F6F5F5" />


</LinearLayout>